Fix blurry text, re-enable brightness transition

--- a/_assets/css/less/partials/structure.less
+++ b/_assets/css/less/partials/structure.less
@@ -141,6 +141,8 @@
 	-webkit-filter: brightness(1.0);
 	filter: brightness(1.0);
 	transition: -webkit-filter .2s ease-in, filter .2s ease-in;
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 }
 
 .js-menu-active .main,
